tests/NormalTests/paczka1/small_fuzzy/74484324.err
Error in line 3: Z1c4q9m S798 98,1
Error in line 11: 8tOh4dxA S953 47,6
